--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-three/fiber": "^8.16.8",
     "@types/three": "^0.166.0",
     "gh-pages": "^6.1.1",
+    "jsxgraph": "^1.9.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "three": "^0.166.1"
